<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Hello World!"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:contentDescription="@string/image_button_5"
                app:srcCompat="@drawable/baseline_cake_24" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_cake_24"
                android:contentDescription="@string/image_button_4" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_cake_24"
                android:contentDescription="@string/image_button_2" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_marginTop="4dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_cake_24"
                android:contentDescription="@string/image_button_3" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radioButton2"
            android:layout_marginEnd="100dp">

            <RadioButton
                android:button="@drawable/other"
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layoutDirection="rtl"
                android:text="RadioButton" />
<!--      додає кнопку ще і справа      android:drawableRight="@drawable/customradiobutton"-->
            <RadioButton
                android:button="@drawable/other"
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:button="@drawable/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="RadioButton" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:button="@drawable/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="RadioButton" />
        </RadioGroup>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chip_4" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chip_2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chip_3" />

        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp">

        <CheckBox
            android:id="@+id/checkBox4"
            android:button="@drawable/customcheckbox"
            android:layout_width="wrap_content"
            style="@style/CustomCheckBoxStyle"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="C++" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:button="@drawable/customcheckbox"
            android:layout_width="wrap_content"
            style="@style/CustomCheckBoxStyle"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="C#" />

        <CheckBox
            android:button="@drawable/customcheckbox"
            android:id="@+id/checkBox"
            style="@style/CustomCheckBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Python" />

        <CheckBox
            android:id="@+id/checkBox2"
            style="@style/CustomCheckBoxStyle"
            android:button="@drawable/customcheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Kotlin" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/gradient"
        android:text="Button" />

    <TextView
        android:id="@+id/TextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomToggleButtonStyle"
            android:textColor="@color/other"
            android:textOn="On"
            android:textOff="Off"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            android:textOff="Off"
            android:textOn="On"
            android:showText="true"
            android:padding="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        app:fabSize="mini"
        android:elevation="2dp"
        android:contentDescription="@string/floating_action_button"
        android:focusable="true"
        style="@style/CustomFab"
        app:srcCompat="@drawable/baseline_check_circle_outline_24" />
</LinearLayout>
